# emojiscript

./: README.md  emojiscript.cabal  index.html  package.json
keymaps/: emojiscript.cson
lib/: emoji-panel.html  emojiscript-view.coffee  emojiscript.coffee  test.txt
menus/: emojiscript.cson
spec/: emojiscript-spec.coffee  emojiscript-view-spec.coffee
src/: Transpile.hi  Transpile.hs  emojis.txt  emojiscript  substitutions.txt  test.emoji
styles/: emojiscript.less
test/: fizbuzz.emoji  fizbuzz.emoji.js  string.emoji  string.emoji.js  test.js
transpiler/: Transpile.hs  emojiscript  substitutions.txt  test.emoji
