name:                emojiscript
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dan3944/emojiscript#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable emojiscript
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory >= 1.3
                     , containers >= 0.5.7
                     , transformers >= 0.5.2
                     , random >= 1.0